Changelog for 1.2.5
* Partsgroup handling corrected on POS and Sales invoice screens (Chris T)
* Closed books handling is corrected (Chris T)
* Corrected intermediate rounding issues involving sales tax (Chris T)
* Fixed FX issue with posting cash transfers (Chris T)
* Corrected multibyte handling in form generation (Seneca)
* Corrected NaN issues in invoice printing (Seneca)
* Corrected PO and order number searches not working (Chris T).
* Corrected Exchange Rate display issue (CHris T).
* Corrected number parsing issues with 1.000,00 formats (Chris T).
* Corrected a number of date handling issues and added tests (Seneca).

Changelog for 1.2.4
* Fixed internal functions avgcost() and lastcost() to not use float (Joshua D)
* Fixed error posting vendor invoice with fraction costs.  (Chris M)
* Fixed sales tax display issue on invoice/order entry screen (Chris T)
* Fixed inconsistant error when setting to recur 0 times (Chris T)
* Fixed Access Denied when sending email (CHris T)
* Added Makefile.PL as optional means of dependency checking (experimental, Chris T)
* Updated INSTALL file to use correct globaldbh syntax (Chris T)
* Updated UNGRADE file to recommend reading INSTALL first (Chris T)


Changelog for 1.2.3
* Corrected per-user locale selection (Seneca)
* Corrected partial commits for invoices and orders (Chris T)
* Corrected data types for invoice.qty and invoice.allocated in new dbs (CHris T)
* Corrected suffix error in 1.2.1 to use .sqlc for backups (Joshua D)

Changelog for 1.2.2
* Corrected sales tax display bug in order entry screen (Chris T)
* Corrected database update unable to connect (Seneca)
* Corrected login problems on 1.2.1
* Corrected INSTALL for [GlobalDBH] (Joshua Drake)

Changelog for LedgerSMB 1.2.1
* Modifed AM.pm to correctly use globals from ledgersmb.conf (Joshua Drake)
* Simplified backup functions in AM.pm (Joshua Drake)
* Corrected serious sales tax posting bug (Chris Travers)
* Corrected two sales tax display bugs (Chris Travers)