@@ -1,3 +1,4 @@
+
 Changelog for 1.2.5
 * Partsgroup handling corrected on POS and Sales invoice screens (Chris T)
 * Closed books handling is corrected (Chris T)
@@ -9,6 +10,7 @@ Changelog for 1.2.5
 * Corrected Exchange Rate display issue (CHris T).
 * Corrected number parsing issues with 1.000,00 formats (Chris T).
 * Corrected a number of date handling issues and added tests (Seneca).
+* Applied invoice performance patch from Ashley Gittins (Chris T)
 
 Changelog for 1.2.4
 * Fixed internal functions avgcost() and lastcost() to not use float (Joshua D)
